--- a/src/app/homepage-doctor/homepage-doctor.component.html
+++ b/src/app/homepage-doctor/homepage-doctor.component.html
@@ -55,15 +55,11 @@
       <div class="form-row mb-4">
         <div class="col">
           <!-- Last name -->
-          <input [(ngModel)]="bloodRequest.patientLastName" type="text" id="formLastName" name="defaultRegisterFormLastName" class="form-control" placeholder="Nume pacient">
+          <input [(ngModel)]="bloodRequest.lastName" type="text" id="formLastName" name="defaultRegisterFormLastName" class="form-control" placeholder="Nume pacient">
         </div>
         <div class="col">
           <!-- First name -->
-          <input [(ngModel)]="bloodRequest.patientFirstName" type="text" id="formFirstName" name="defaultRegisterFormFirstName" class="form-control" placeholder="Prenume pacient">
-        </div>
-        <div class="col">
-          <!-- CNP -->
-          <input [(ngModel)]="bloodRequest.patientCNP" type="text" id="formCNP" name="defaultRegisterFormFirstName" class="form-control" placeholder="CNP">
+          <input [(ngModel)]="bloodRequest.firstName" type="text" id="formFirstName" name="defaultRegisterFormFirstName" class="form-control" placeholder="Prenume pacient">
         </div>
       </div>
 
@@ -71,7 +67,7 @@
       <p class="h6 mb-2">Nume clinica</p>
       <div class="form-row mb-4">
 
-        <select [(ngModel)]="bloodRequest.patientClinic" name="patientClinic" class="browser-default custom-select">
+        <select [(ngModel)]="bloodRequest.centre" name="patientClinic" class="browser-default custom-select">
           <option value="" disabled selected>Choose your option</option>
           <option *ngFor="let location of locations" value="{{locations.indexOf(location)}}">{{location.name}} de la adresa {{location.address}}</option>
         </select>
@@ -81,7 +77,7 @@
       <p class="h6 mb-2">Detalii cerere</p>
       <div class="form-row mb-4">
         <label>Pacientul are nevoie de: </label>
-        <input [(ngModel)]="bloodRequest.quantityRequired" name="quantity" id="quantity" type="number" value="0" class="form-control inputQuantity" placeholder="" aria-describedby="defaultQuantityHelpBlock">
+        <input [(ngModel)]="bloodRequest.bloodQty" name="quantity" id="quantity" type="number" value="0" class="form-control inputQuantity" placeholder="" aria-describedby="defaultQuantityHelpBlock">
         <label> litri.</label>
       </div>
       <div class="form-row">
@@ -105,4 +101,54 @@
     </form>
   </div>
   <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+</div>
+<div mdbModal #frameSuccess="mdbModal" class="modal fade" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog modal-notify modal-success" role="document">
+    <!--Content-->
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <p class="heading lead">Succes!</p>
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frameSuccess.hide()">
+          <span aria-hidden="true" class="white-text">&times;</span>
+        </button>
+      </div>
+
+      <!--Body-->
+      <div class="modal-body">
+        <div class="text-center">
+          <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+          <p>Cererea facuta de tine a fost reusita</p>
+        </div>
+      </div>
+      <!--/.Content-->
+    </div>
+  </div>
+</div>
+<div mdbModal #frameFail="mdbModal" class="modal fade right" id="frameModalTop2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog modal-notify modal-danger" role="document">
+    <!--Content-->
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <p class="heading">Ne pare rau!</p>
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frameFail.hide()">
+          <span aria-hidden="true" class="white-text">&times;</span>
+        </button>
+      </div>
+
+      <!--Body-->
+      <div class="modal-body">
+        <div class="text-center">
+          <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+          <p>{{failMessage}}</p>
+        </div>
+      </div>
+      </div>
+    <!--/.Content-->
+  </div>
 </div>
