--- a/src/app/homepage-donor/homepage-donor.component.html
+++ b/src/app/homepage-donor/homepage-donor.component.html
@@ -123,6 +123,7 @@
         <th scope="col">Pentru cine ai donat</th>
         <th scope="col">Data donarii</th>
         <th scope="col">Clinica</th>
+        <th scope="col">Statusul donatiei</th>
         <th scope="col">Linkul unde iti poti vedea analizele</th>
       </tr>
       </thead>
@@ -132,6 +133,7 @@
         <td>{{pastDonation.patient}}</td>
         <td>{{pastDonation.date}}</td>
         <td>{{pastDonation.centre}}</td>
+        <td>{{pastDonation.status}}</td>
         <td>{{pastDonation.url}}</td>
       </tr>
       </tbody>
