--- a/src/app/homepage-staff/homepage-staff.component.html
+++ b/src/app/homepage-staff/homepage-staff.component.html
@@ -1,7 +1,7 @@
 
 <div class="container" style="margin-top: 150px">
   <div class="nav justify-content-center py-4" style="background-color: #3f51b5">
-    <p class="red-text">Ai donat ultima data acum 10 zile</p>
+    <h2 class="white-text">Buna ziua stimate doctor!</h2>
   </div>
   <nav class="nav nav-pills mdb-color lighten-4 py-1 nav-fill">
     <a class="nav-item m-1 nav-link active">Incarca datele unei donari</a>
