--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 <mdb-navbar SideClass="navbar red darken-1 navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
   <mdb-navbar-brand>
-    <a class="logo navbar-brand waves-light" mdbWavesEffect><strong>Si eu Donez!</strong></a>
+    <h2 class="logo navbar-brand waves-light" mdbWavesEffect><strong>Si eu Donez!</strong></h2>
   </mdb-navbar-brand>
   <links>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active waves-light" mdbWavesEffect>
-        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" href="#">Profile</a>
-      </li>
+      <!--<li class="nav-item active waves-light" mdbWavesEffect>-->
+        <!--<a class="nav-link">Home <span class="sr-only">(current)</span></a>-->
+      <!--</li>-->
+      <!--<li class="nav-item waves-light" mdbWavesEffect>-->
+        <!--<a class="nav-link" href="#">Profile</a>-->
+      <!--</li>-->
       <li class="nav-item waves-light" mdbWavesEffect>
         <a *ngIf="isLoggedIn()" (click)="signOut()" class="nav-link">Logout</a>
       </li>
@@ -17,10 +17,10 @@
         <a *ngIf="isLoggedInAsDoctorOrStaff()" (click)="signOutAsDoctorOrStaff()" class="nav-link">Logout</a>
       </li>
     </ul>
-    <form class="form-inline waves-light" mdbWavesEffect>
-      <div class="md-form mt-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      </div>
-    </form>
+    <!--<form class="form-inline waves-light" mdbWavesEffect>-->
+      <!--<div class="md-form mt-0">-->
+        <!--<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+      <!--</div>-->
+    <!--</form>-->
   </links>
 </mdb-navbar>
