--- a/src/app/homepage-staff/homepage-staff.component.html
+++ b/src/app/homepage-staff/homepage-staff.component.html
@@ -1,12 +1,13 @@
 
 <div class="container" style="margin-top: 150px">
   <div class="nav justify-content-center py-4" style="background-color: #3f51b5">
-    <h2 class="white-text">Buna ziua stimate doctor!</h2>
+    <h2 class="white-text">Buna ziua stimate membru al staffului!</h2>
   </div>
   <nav class="nav nav-pills mdb-color lighten-4 py-1 nav-fill">
     <a class="nav-item m-1 nav-link active">Incarca datele unei donari</a>
   </nav>
 </div>
+
 <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
 <div class="container grey lighten-4">
   <div>
@@ -47,6 +48,27 @@
       <hr>
     </form>
   </div>
+  <!-- Default form contact -->
+  <form class="text-center border border-light p-5">
+
+    <p class="h4 mb-4">Contacteaza un alt doctor sau membru al staffului</p>
+
+    <!-- Name -->
+    <input type="text" [(ngModel)]="sendAnEmailDTO.sender" id="senderEmail" name="senderEmail" class="form-control mb-4" placeholder="E-mailul tau">
+
+    <!-- Email -->
+    <input type="email" [(ngModel)]="sendAnEmailDTO.receiver" id="receiverEmail" name="receiverEmail" class="form-control mb-4" placeholder="E-mailul destinatarului">
+
+    <!-- Message -->
+    <div class="form-group">
+      <textarea class="form-control rounded-0" [(ngModel)]="sendAnEmailDTO.text" id="exampleFormControlTextarea2" name="exampleFormControlTextarea2" rows="3" placeholder="Mesajul tau"></textarea>
+    </div>
+
+    <!-- Send button -->
+    <button (click)="sendEmail()" class="btn btn-info btn-block" type="submit">Send</button>
+
+  </form>
+  <!-- Default form contact -->
 </div>
 <div mdbModal #frameSuccess="mdbModal" class="modal fade" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
